cpp/crypto-square/run-tests-cpp.txt
Running automated test file(s):


===============================================================================

Running: make clean
rm -rf ./build

real	0m0.006s
user	0m0.002s
sys	0m0.004s

===============================================================================

export LDFLAGS="-lgcov --coverage" CXXFLAGS="--coverage"

===============================================================================

Running: make coverage | ansifilter
rm -rf ./build
mkdir -pv ./build
mkdir: created directory './build'

cd ./build; export LDFLAGS="-lgcov --coverage" CXXFLAGS="--coverage"; cmake -DEXERCISM_RUN_ALL_TESTS=1 -DCMAKE_EXPORT_COMPILE_COMMANDS=1 -G 'Unix Makefiles' ../; if make; then printf "\n=== All Tests Passed ===\n"; else printf "\n=== Test Failure ===\n"; false; fi
-- The CXX compiler identification is GNU 10.2.1
-- Detecting CXX compiler ABI info
-- Detecting CXX compiler ABI info - done
-- Check for working CXX compiler: /usr/bin/c++ - skipped
-- Detecting CXX compile features
-- Detecting CXX compile features - done
-- Configuring done
-- Generating done
-- Build files have been written to: /home/vpayno/git_vpayno/exercism-workspace/cpp/crypto-square/build
make[1]: Entering directory '/home/vpayno/git_vpayno/exercism-workspace/cpp/crypto-square/build'
make[2]: Entering directory '/home/vpayno/git_vpayno/exercism-workspace/cpp/crypto-square/build'
make[3]: Entering directory '/home/vpayno/git_vpayno/exercism-workspace/cpp/crypto-square/build'
make[3]: Leaving directory '/home/vpayno/git_vpayno/exercism-workspace/cpp/crypto-square/build'
make[3]: Entering directory '/home/vpayno/git_vpayno/exercism-workspace/cpp/crypto-square/build'
[ 25%] Building CXX object CMakeFiles/crypto-square.dir/crypto_square_test.cpp.o
[ 50%] Building CXX object CMakeFiles/crypto-square.dir/crypto_square.cpp.o
[ 75%] Building CXX object CMakeFiles/crypto-square.dir/test/tests-main.cpp.o
[100%] Linking CXX executable crypto-square
make[3]: Leaving directory '/home/vpayno/git_vpayno/exercism-workspace/cpp/crypto-square/build'
[100%] Built target crypto-square
make[3]: Entering directory '/home/vpayno/git_vpayno/exercism-workspace/cpp/crypto-square/build'
make[3]: Leaving directory '/home/vpayno/git_vpayno/exercism-workspace/cpp/crypto-square/build'
make[3]: Entering directory '/home/vpayno/git_vpayno/exercism-workspace/cpp/crypto-square/build'
===============================================================================
All tests passed (12 assertions in 12 test cases)

make[3]: Leaving directory '/home/vpayno/git_vpayno/exercism-workspace/cpp/crypto-square/build'
[100%] Built target test_crypto-square
make[2]: Leaving directory '/home/vpayno/git_vpayno/exercism-workspace/cpp/crypto-square/build'
make[1]: Leaving directory '/home/vpayno/git_vpayno/exercism-workspace/cpp/crypto-square/build'

=== All Tests Passed ===

find . -regextype posix-egrep -regex '^.*(tests-main|CompilerId).*[.](gcda|gcno)$' -print -delete
./build/CMakeFiles/3.22.2/CompilerIdCXX/CMakeCXXCompilerId.gcno
./build/CMakeFiles/crypto-square.dir/test/tests-main.cpp.gcno
./build/CMakeFiles/crypto-square.dir/test/tests-main.cpp.gcda

find . -regextype posix-egrep -regex '^.*[.](gcda|gcno)$'
./build/CMakeFiles/crypto-square.dir/crypto_square_test.cpp.gcno
./build/CMakeFiles/crypto-square.dir/crypto_square.cpp.gcno
./build/CMakeFiles/crypto-square.dir/crypto_square.cpp.gcda
./build/CMakeFiles/crypto-square.dir/crypto_square_test.cpp.gcda

gcovr --print-summary
------------------------------------------------------------------------------
                           GCC Code Coverage Report
Directory: .
------------------------------------------------------------------------------
File                                       Lines    Exec  Cover   Missing
------------------------------------------------------------------------------
crypto_square.cpp                             64      63    98%   11
crypto_square_test.cpp                        44      44   100%   
test/catch.hpp                                50      27    54%   1448-1450,1642-1643,1710-1711,1827-1833,1835-1836,2016-2017,2039-2040,2227,2229,2560
------------------------------------------------------------------------------
TOTAL                                        158     134    84%
------------------------------------------------------------------------------
lines: 84.8% (134 out of 158)
branches: 43.6% (177 out of 406)

real	0m12.156s
user	0m11.037s
sys	0m1.115s

===============================================================================

cmake-format --in-place CMakeLists.txt
WARNING config_util.py:307: The following configuration options were ignored:
  max_subargs_per_line

real	0m0.157s
user	0m0.113s
sys	0m0.045s

===============================================================================

cmake-lint CMakeLists.txt
WARNING The following configuration options were ignored:
  max_subargs_per_line
CMakeLists.txt
==============
CMakeLists.txt:15,06: [C0103] Invalid directory variable name "exercise_cpp" doesn't match `[A-Z][0-9A-Z_]+|_[0-9a-z_]+`
CMakeLists.txt:17,06: [C0103] Invalid directory variable name "exercise_cpp" doesn't match `[A-Z][0-9A-Z_]+|_[0-9a-z_]+`
CMakeLists.txt:61,02: [C0113] Missing COMMENT in statement which allows it

Summary
=======
files scanned: 1
found lint:
  Convention: 3


real	0m0.171s
user	0m0.127s
sys	0m0.046s

===============================================================================

Running: clang-format-16 -style=file -i ./crypto_square.cpp ./crypto_square_test.cpp ./crypto_square.h

real	0m0.035s
user	0m0.016s
sys	0m0.019s

===============================================================================

Running: ../../.github/citools/cpp/clang-check
clang-check-16 --analyze ./crypto_square.cpp ./crypto_square_test.cpp ./crypto_square.h
error: argument unused during compilation: '-stdlib=libstdc++' [-Werror,-Wunused-command-line-argument]
error: invalid argument '-std=c++17' not allowed with 'C'
/home/vpayno/git_vpayno/exercism-workspace/cpp/crypto-square/crypto_square.h:4:10: fatal error: 'algorithm' file not found
#include <algorithm>
         ^~~~~~~~~~~
1 error generated.
Error while processing /home/vpayno/git_vpayno/exercism-workspace/cpp/crypto-square/crypto_square.h.

real	0m3.266s
user	0m3.141s
sys	0m0.125s


real	0m3.270s
user	0m3.142s
sys	0m0.128s

===============================================================================

Running: ../../.github/citools/cpp/clang-tidy | head -n 100
36235 warnings generated.
80441 warnings generated.
80441 warnings and 3 errors generated.
Error while processing /home/vpayno/git_vpayno/exercism-workspace/cpp/crypto-square/crypto_square.h.
Suppressed 80448 warnings (80441 in non-user code, 7 NOLINT).
Use -header-filter=.* to display errors from all non-system headers. Use -system-headers to display errors from system headers as well.
Found compiler error(s).

real	0m18.081s
user	0m17.911s
sys	0m0.165s
Running: clang-tidy-16 ./crypto_square.cpp ./crypto_square_test.cpp ./crypto_square.h
error: invalid argument '-std=c++17' not allowed with 'C' [clang-diagnostic-error]
error: argument unused during compilation: '-stdlib=libstdc++' [clang-diagnostic-unused-command-line-argument]
/home/vpayno/git_vpayno/exercism-workspace/cpp/crypto-square/crypto_square.h:4:10: error: 'algorithm' file not found [clang-diagnostic-error]
#include <algorithm>
         ^~~~~~~~~~~


real	0m18.083s
user	0m17.912s
sys	0m0.167s

===============================================================================

